# BaseKit-with-FastApi-Python

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: router.py
app/api/v1/: orders.py  products.py  users.py
app/common/: enums.py  exceptions.py  helpers.py  pagination.py  responses.py  utils.py  validators.py
app/core/: config.py  constants.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: init_db.py  session.py
app/db/migrations/: .gitkeep  env.py
app/modules/auth/: dependency.py  model.py  repository.py  router.py  schema.py  service.py  utils.py
app/modules/orders/: model.py  repository.py  router.py  schema.py  service.py
app/modules/products/: model.py  repository.py  router.py  schema.py  service.py
app/modules/users/: model.py  repository.py  router.py  schema.py  service.py  utils.py
app/services/: ai.py  email.py  queue.py  redis.py  sms.py  storage.py
app/static/: .gitkeep
app/templates/: .gitkeep
app/tests/: conftest.py  test_health.py
app/tests/auth/: test_auth.py
app/tests/orders/: test_orders.py
app/tests/users/: test_users.py
app/websocket/: manager.py  routes.py
app/workers/: celery_app.py  email_worker.py  notification_worker.py
